max velocity and ramp for axis movement (assertion!!!)

--- a/web/index.html
+++ b/web/index.html
@@ -359,6 +359,12 @@ Card 2
 	<label>PosReachedLimit 1:</label> <input class="form-control" type="number" id="PosLim0" name="PosLim0" size="10" value="10" onchange="sendValue(this);">
 	<label>PosReachedLimit 2:</label> <input class="form-control" type="number" id="PosLim1" name="PosLim1" size="10" value="10" onchange="sendValue(this);">		
 	<br>
+	<label>Rate 1:</label> <input class="form-control" type="number" id="Rate0" name="Rate0" size="10" value="10" onchange="sendValue(this);">
+	<label>Rate 2:</label> <input class="form-control" type="number" id="Rate1" name="Rate1" size="10" value="10" onchange="sendValue(this);">		
+	<br>
+	<label>Accel 1:</label> <input class="form-control" type="number" id="Accel0" name="Accel0" size="10" value="10" onchange="sendValue(this);">
+	<label>Accel 2:</label> <input class="form-control" type="number" id="Accel1" name="Accel1" size="10" value="10" onchange="sendValue(this);">		
+	<br>
 	<label>Analog 1:</label> <input class="form-control" type="number" id="AI0" size="10" value="0" disabled>
 	<label>Analog 2:</label> <input class="form-control" type="number" id="AI1" size="10" value="0" disabled>
 	<br>
