some comments and rework

--- a/web/index.html
+++ b/web/index.html
@@ -281,12 +281,14 @@ input{
 <td><div id=Debug class="collapsible">
 <table style="width:100%" border=1><tr>
 <td width=22%>
-  <fieldset>
+<!--    <fieldset>
     <input type="radio" id="de" name="enableDebug" value="1" onclick="handleClick(this);">
     <label for="de"> Byte Array</label><br> 
     <input type="radio" id="va" name="enableDebug" value="0" checked="checked" onclick="handleClick(this);">
     <label for="va"> Variables</label><br> 
   </fieldset>
+-->
+
 </td>
 <td>
 	<label>SPI Out: </label> <input class="form-control" type="text"
